syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto"; 

option csharp_namespace = "AutoReservation.Service.Grpc";

package AutoReservation;

service AutoService {
    rpc GetAll(google.protobuf.Empty) 
        returns (AutosDto);
    
    rpc Get(AutoRequest)
        returns (AutoDto);
    
	rpc Insert(AutoDto)
		returns (AutoDto);
		
	rpc Update(AutoDto)
		returns (google.protobuf.Empty);

	rpc Delete(AutoDto)
		returns (google.protobuf.Empty);
}

message AutoRequest {
    int32 id = 1;
}

message AutosDto {
    repeated AutoDto cars = 1;
}

message AutoDto {
    int32 id = 1;
    string marke = 2;
    int32 tagestarif = 3;
    bytes RowVersion = 4;
    AutoKlasse AutoKlasse = 5;
	int32 basistarif = 6;   
}

enum AutoKlasse {
	Luxusklasse = 0;
	Mittelklasse = 1;
	Standard = 2;
}